--- a/packages/frontend/src/login/Login.css
+++ b/packages/frontend/src/login/Login.css
@@ -8,3 +8,23 @@
         max-width: 320px;
     }
 }
+
+.LoaderButton {
+    margin-top: 12px;
+}
+
+.LoaderButton .spinning {
+    margin-right: 7px;
+    top: 2px;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    to {
+        transform: scale(1) rotate(360deg);
+    }
+}
